media queries to fix singlePokemonCard on mobile

--- a/sass/components/_cardTopBar.scss
+++ b/sass/components/_cardTopBar.scss
@@ -11,6 +11,7 @@
     display: flex;
     align-items: center;
     color: white;
+    text-transform: capitalize;
     & img {
       height: 30px;
       width: 30px;
