--- a/sass/components/_pokeCard.scss
+++ b/sass/components/_pokeCard.scss
@@ -11,6 +11,12 @@
   transform: translate(-50%, -50%);
   z-index: 10;
 
+  @media (max-width: $ig-small-screen) {
+    width: 90vw;
+    font-size: 0.8rem;
+    transform: translate(-50%, -40%);
+  }
+
   &__loading {
     position: absolute;
     top: 50%;
@@ -51,15 +57,27 @@
   &__basic-info {
     display: flex;
     height: 100%;
+    @media (max-width: $ig-small-screen) {
+      flex-direction: column-reverse;
+      text-align: center;
+    }
     &--image {
       display: flex;
       justify-content: center;
       align-items: center;
+      @media (max-width: $ig-small-screen) {
+        margin: 0 auto;
+      }
+
       width: 35%;
       height: 100%;
       & img {
         height: 200px;
         width: 200px;
+        @media (max-width: $ig-small-screen) {
+          height: 120px;
+          width: 120px;
+        }
       }
     }
     &--info {
@@ -72,6 +90,10 @@
       &--types {
         display: flex;
         margin: 1rem 0;
+        @media (max-width: $ig-small-screen) {
+          justify-content: center;
+        }
+
         & p {
           margin-right: 1rem;
           padding: 5px 10px;
@@ -80,12 +102,18 @@
       }
       &--size {
         display: flex;
+        @media (max-width: $ig-small-screen) {
+          justify-content: center;
+        }
         & p {
           margin-right: 1rem;
         }
       }
       &--flavor {
         margin-top: 1rem;
+        @media (max-width: $ig-small-screen) {
+          padding: 0 2rem;
+        }
       }
     }
   }
@@ -154,6 +182,7 @@
           height: calc(33px);
           line-height: calc(33px);
           vertical-align: middle;
+          text-transform: capitalize;
           &:hover {
             background: rgb(6, 0, 132);
             color: rgb(254, 254, 254);
