--- a/sass/components/_pokedex.scss
+++ b/sass/components/_pokedex.scss
@@ -15,7 +15,7 @@
   transition: visibility 0.1s 0.3s ease;
 
   @media (max-width: $ig-small-screen) {
-    width: 75%;
+    width: 85%;
   }
 
   &__loading img {
