--- a/sass/components/_windowTopBar.scss
+++ b/sass/components/_windowTopBar.scss
@@ -11,7 +11,7 @@
   transition: all 0.3s ease;
 
   @media (max-width: $ig-small-screen) {
-    width: 75%;
+    width: 85%;
   }
 
   &.maximized {
